--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -6,12 +6,13 @@
 @import 'components/navbar';
 @import 'components/form';
 
-@import 'components/page-login';
+@import 'components/page-login-register';
 @import 'components/page-dashboard';
 @import 'components/online-users';
 @import 'components/chat';
 @import 'components/channels';
 @import 'components/modal';
+@import 'components/notification';
 
 html, body, #app, #react-app {
     height: 100%;
