--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -22,6 +22,10 @@ form {
                 margin-bottom: .5rem;
                 margin-right: 0;
             }
+            button {
+                margin-left: auto;
+                margin-top: .5rem;
+            }
         }
     }
 
