--- a/src/scss/components/_channels.scss
+++ b/src/scss/components/_channels.scss
@@ -14,6 +14,8 @@ $sidebar-color: darken(white, 10);
         display: flex;
         padding: 1rem;
         border-left: 1px solid white;
+        text-decoration: none;
+        color: white;
         cursor: pointer;
         
         &.active, &:hover {
