--- a/src/scss/components/_page-dashboard.scss
+++ b/src/scss/components/_page-dashboard.scss
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: column;
         border-right: 1px solid lightgray;
-        width: 15rem;
+        min-width: 15rem;
         height: 100%;
         overflow-y: scroll;
     }
