Add new account settings, add fadein and spinner loading components

--- a/src/scss/components/_channels.scss
+++ b/src/scss/components/_channels.scss
@@ -9,6 +9,7 @@ $sidebar-color: darken(white, 10);
     flex-grow: 1;
     flex-direction: column;
     overflow-y: scroll;
+    position: relative;
 
     .channel {
         display: flex;
