--- a/src/scss/components/_page-settings.scss
+++ b/src/scss/components/_page-settings.scss
@@ -54,7 +54,7 @@
             margin-bottom: .5rem;
             display: flex;
             justify-content: space-between;
-            padding: 1rem;
+            padding-bottom: 1rem;
         }
 
         .settings-group {
