--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -15,6 +15,7 @@
 @import 'components/navbar';
 @import 'components/form';
 @import 'components/button';
+@import 'components/loading';
 
 // https://github.com/tobiasahlin/SpinKit
 @import '~spinkit/scss/spinkit';
