--- a/src/scss/components/_loading.scss
+++ b/src/scss/components/_loading.scss
@@ -1,7 +1,10 @@
 .loading {
     
 
-    &.loading-fullscreen {
+    &.loading-fade-in {
+        background: $main-background;
+        color: darkgray;
+        opacity: 0;
         position: absolute;
         left: 0;
         top: 0;
@@ -10,5 +13,27 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        z-index: -500;
+        transition: all .4s ease-in-out;
+
+        &.black {
+            background: black;
+        }
+        &.gray {
+            background: gray;
+        }
+        &.white {
+            background: white;
+        }
+
+        &.active {
+            opacity: 1;
+            z-index: 100000;
+        }
+    }
+
+
+    .sk-fading-circle .sk-circle {
+        margin: 0;
     }
 }
