--- a/src/scss/components/_online-users.scss
+++ b/src/scss/components/_online-users.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     height: $online-users-height;
-    border-bottom: 1px solid white;
+    border-bottom: $border;
 
     .online-users-count {
         padding: .25rem;
@@ -15,6 +15,8 @@
         border-radius: 5px;
         background: white;
         opacity: .4;
+        cursor: pointer;
+        
         &:hover {
             opacity: 1;
         }
