--- a/src/scss/components/_notification.scss
+++ b/src/scss/components/_notification.scss
@@ -4,13 +4,13 @@
         justify-content: center;
         display: flex;
         padding: .5rem;
-        color: white;
+        color: $color-white;
 
         &.notification-error {
-            background: salmon;
+            background: $color-danger;
         }
         &.notification-info {
-            background: lighten(blue, 10);
+            background: $color-info;
         }
 
         .remove-notification {
