--- a/src/scss/components/_page-dashboard.scss
+++ b/src/scss/components/_page-dashboard.scss
@@ -2,22 +2,14 @@
     display: flex;
     flex: 1 0 auto;
     flex-direction: row;
-    background: $dashboard-background;
     height: $dashboard-height;
-
-    .sidebar {
-        display: flex;
-        flex-direction: column;
-        border-right: 1px solid lightgray;
-        min-width: 15rem;
-        height: 100%;
-        overflow-y: scroll;
-    }
-
+    overflow-x: hidden;
+    
     .content {
         display: flex;
         flex-direction: column;
-        flex-grow: 1;
+        flex-grow: 2;
         height: 100%;
+        max-width: 100%;
     }
 }
