--- a/src/scss/components/_page-login-register.scss
+++ b/src/scss/components/_page-login-register.scss
@@ -1,39 +1,16 @@
 .page-login, .page-register {
     padding-top: 2rem;
-    background: $main-background;
-    display: flex;
-    flex-grow: 1;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: column;
+
+    @include mobile {
+        padding-top: 0;
+    }
 
     form {
+        margin: 0 auto;
         padding: 2rem;
-        border: 1px solid black;
-        background-color: lighten($main-background, 10);
-        flex-grow: 0;
-        max-width: 100%;
-
-        .title {
-            font-size: 1.5rem;
-            line-height: 1.5rem;
-            margin-bottom: 2rem;
-        }
-
-        input {
-            width: 14rem;
-            max-width: 100%;
-        }
-
-        button[type="submit"] {
-            margin-left: auto;
-            background: white;
-            border-radius: 0;
-            border: 1px solid black;
-            padding: .5rem;
-            &:hover {
-                background: darken(white, 10);
-            }
+        width: 40%;
+        @include mobile {
+            width: 100%;
         }
     }
 }
